--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -59,7 +59,7 @@ layout: default
 
 <p class="center">
   <a href="{{ search | relative_url | uri_escape }}">
-    Search for {{ page.name | default: page.title }}'s papers on the Research page
+    Search for {{ page.ename | default: page.title }}'s papers on the Research page
   </a>
 </p>
 
