--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -64,7 +64,7 @@ layout: default
 </p>
 
 {% capture search -%}
-  blog/?search={{ page.name }}
+  blog/?search={{ page.ename }}
 {%- endcapture %}
 
 <!--
