--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -12,7 +12,7 @@
         | first
       %}
       {% if member %}
-        {% include portrait.html lookup=author style="tiny" %}
+        {% include portrait.html lookup=author style="mini" %}
       {% else %}
         <span data-tooltip="Author">
           {% include icon.html icon="fa-solid fa-feather-pointed" %}
@@ -43,3 +43,9 @@
 {% if include.tags %}
   {% include tags.html tags=include.tags link="blog" %}
 {% endif %}
+
+<style>
+.portrait[data-style="mini"] .portrait-image {
+  width: 25px;
+}
+</style>
