--- a/_styles/feature.scss
+++ b/_styles/feature.scss
@@ -1,6 +1,3 @@
----
----
-
 // Original feature style (keep this for other pages)
 $wrap: 800px;
 
@@ -80,6 +77,7 @@ $wrap: 800px;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 
 .feature-card-image img {
@@ -99,6 +97,7 @@ $wrap: 800px;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 2;
   background: linear-gradient(to top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.1) 100%);
   display: flex;
   flex-direction: column;
