--- a/_styles/feature.scss
+++ b/_styles/feature.scss
@@ -108,6 +108,7 @@ $wrap: 800px;
   padding: 25px !important;
   box-sizing: border-box !important;
   text-align: center !important; // 文字居中
+  z-index: 2 !important;
 }
 
 .feature-card-icon {
