update index css

--- a/_styles/feature.scss
+++ b/_styles/feature.scss
@@ -57,6 +57,7 @@ $wrap: 800px;
   justify-content: space-between !important;
   gap: 20px !important;
   margin: 40px 0 !important;
+  position: relative !important;
 }
 
 .feature-card {
