--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -101,7 +101,7 @@ nav {
   flex-wrap: wrap;
   gap: 10px;
   font-family: var(--heading);
-  text-transform: uppercase;
+  // text-transform: uppercase;
 }
 
 nav > a {
