--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,5 +7,6 @@
       {% include content.html content=content %}
     </main>
     {% include footer.html %}
+    {% include back-to-top.html %}
   </body>
 </html>
