--- a/_styles/back-to-top.scss
+++ b/_styles/back-to-top.scss
@@ -9,7 +9,7 @@
   height: 50px;
   border-radius: 50%;
   background-color: var(--primary);
-  color: white;
+  color: black;
   border: none;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
