--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -33,8 +33,8 @@ header a {
   justify-content: flex-start;
   align-items: center;
   gap: 10px;
-  flex-basis: 0;
-  flex-grow: 1;
+  flex-basis: auto;
+  flex-grow: 0;
   max-width: 100%;
 }
 
@@ -109,7 +109,7 @@ nav > a {
 }
 
 nav > a:hover {
-  color: var(--primary);
+  color: #0795d9;
 }
 
 header:not([data-big]) {
