--- a/_styles/button.scss
+++ b/_styles/button.scss
@@ -18,9 +18,9 @@ button {
   margin: 5px;
   padding: 8px 15px;
   border: none;
-  border-radius: var(--rounded);
-  background: var(--primary);
-  color: var(--background);
+  border-radius: 15px;
+  background: #0795d9 !important;
+  color: white !important;
   text-align: center;
   font: inherit;
   font-family: var(--heading);
@@ -39,7 +39,7 @@ button {
 .button[data-style="bare"] {
   padding: 5px;
   background: none;
-  color: var(--primary);
+  color: #0795d9;
 
   &:hover {
     color: var(--text);
