--- a/_styles/post-excerpt.scss
+++ b/_styles/post-excerpt.scss
@@ -47,6 +47,7 @@ $wrap: 800px;
 .post-excerpt-text > a:first-child {
   width: 100%;
   font-weight: var(--semi-bold);
+  font-size: x-large;
 }
 
 .post-excerpt-text > div {
