update background image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,8 @@
 {% assign svg = "images/logo.svg" | file_exists %}
 {% assign png = "images/logo.png" | file_exists %}
 {% assign jpg = "images/logo.jpg" | file_exists %}
-{% assign logo = svg | default: png | default: jpg | default: nil %}
+{% assign jpg = "images/logo.gif" | file_exists %}
+{% assign logo = svg | default: gif | default: png | default: jpg | default: nil %}
 
 <header
   class="background"
@@ -27,7 +28,7 @@
       </span>
     {% endif %}
     {% if site.logo-text != false %}
-      <span class="title-text" data-tooltip="Home">
+      <span class="title-text">
         {% if site.title and site.show-title != false %}
           <span class="title">{{ site.title }}</span>
         {% endif %}
