--- a/_includes/back-to-top.html
+++ b/_includes/back-to-top.html
@@ -1,3 +1,3 @@
-<button id="back-to-top" class="back-to-top" aria-label="回到顶部" data-tooltip="回到顶部">
+<button id="back-to-top" class="back-to-top" data-tooltip="回到顶部">
   {% include icon.html icon="fa-solid fa-arrow-up" %}
 </button>
