--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -14,7 +14,7 @@
       {% if member %}
         {% include portrait.html lookup=author style="mini" %}
       {% else %}
-        <span data-tooltip="Author">
+        <span>
           {% include icon.html icon="fa-solid fa-feather-pointed" %}
           <span>{{ author }}</span>
         </span>
@@ -26,14 +26,14 @@
   {% assign updated = include.updated | date: "%B %d, %Y" %}
 
   {% if published %}
-    <span data-tooltip="Originally published on">
+    <span>
       {% include icon.html icon="fa-regular fa-calendar" %}
       <span>{{ published }}</span>
     </span>
   {% endif %}
 
   {% if updated and updated != "" and updated != published %}
-    <span data-tooltip="Last updated on">
+    <span>
       {% include icon.html icon="fa-solid fa-clock-rotate-left" %}
       <span>{{ updated }}</span>
     </span>
