update background image again

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -30,7 +30,7 @@
       data-dark="{{ dark }}"
     {% endif %}
     {% if image %}
-      style="--image: url('{{ image | relative_url | uri_escape }}')"
+      style="--image: url('{{ '/images/background.gif' | relative_url | uri_escape }}')"
     {% endif %}
   >
     {{ section }}
