--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 {% assign svg = "images/logo.svg" | file_exists %}
 {% assign png = "images/logo.png" | file_exists %}
 {% assign jpg = "images/logo.jpg" | file_exists %}
-{% assign jpg = "images/logo.gif" | file_exists %}
+{% assign gif = "images/logo.gif" | file_exists %}
 {% assign logo = svg | default: gif | default: png | default: jpg | default: nil %}
 
 <header
